feat: adicionado templates finais

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,12 @@
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <!-- Navbar vai aparecer apenas botão criar projeto, seleção de projetos(pagina main) e conta do usuario no lado oposto extremo direito -->
+    <!-- Navbar vai aparecer, seleção de projetos(pagina main) e conta do usuario no lado oposto extremo direito -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <div class="container">
-            <a href="#" class="navbar-brand">Gerenciador De Tarefas</a>
+            <h3 class="navbar-brand">Gerenciador De Tarefas</h3>
+            <a href="#" class="navbar-link">Seus Projetos</a>
+            <a href="#" class="navbar-link">Sua Conta</a>
         </div>
     </nav>
 
@@ -21,14 +23,14 @@
         {% block content %}
         {% endblock %}
     </main>
-
+    
     <footer class="bg-light text-center text-lg-start mt-4">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2025 Gerenciador de Tarefas
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
     {% block extra_scripts %}{% endblock %}
 </body>
